# RADO-Trustworthy-Radiology-Impression-Generation

./: README.md  pyproject.toml
codes/: baselines_score_calculation.py  dpo.py  model_finetuning.py  model_inference.py  new_reward_score_generation.py  reward_score_merger.py  severity_reward_model_training.py
datasets/: fbr_test.csv  fbr_train.csv  fbr_val.csv  instruct_test.csv  instruct_train.csv
