[project]
name = "rado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core ML / Training
    "torch>=2.1.0",
    "transformers>=4.46.0",
    "datasets>=2.14.0",
    "trl>=0.12.0",
    "unsloth>=2024.11.0",
    "peft>=0.13.0",
    "accelerate>=0.26.0",

    # Evaluation & Metrics
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "sentence-transformers>=2.2.2",
    "torchmetrics>=1.0.0",
    "bert-score>=0.3.13",

    # NLP / NER
    "spacy>=3.7.0",

    # Data
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
